<resources>
    <string name="app_name">Flashcards</string>
    <string name="app_short_info">Supercharge your learning with flashcards and get the grades you thought were
        impossible.
    </string>

    <string name="settings">Settings</string>
    <string name="rate_us">Rate us</string>
    <string name="about">About</string>

    <string name="all">All sets</string>
    <string name="recents">Recents</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>

    <string name="labels">Labels</string>
    <string name="important">Important</string>
    <string name="todo">Todo</string>
    <string name="dictionary">Dictionary</string>

    <string name="n_cards">%1$s cards</string>

    <string name="edit_set_name">Edit set name</string>
    <string name="add_labels">Add labels</string>
    <string name="edit_labels">Edit labels</string>
    <string name="label_name">Label name</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="are_you_sure_to_move_to_trash">Are you sure to move this set to Trash?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="put_back_trash">Would you like to put back this set?</string>
    <string name="empty_trash">Are you sure you want to empty the Trash?</string>
    <string name="trash_cleared">Trash is empty</string>

    <string name="statistics">Statistics</string>
    <string name="reverse_cards">Flip cards</string>
    <string name="shuffle_cards">Shuffle cards</string>
    <string name="shuffle_card_sides">Shuffle card sides</string>
    <string name="sort_cards_alph">Sort cards alphabetically</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="import_from_csv">Import from CSV</string>

    <string name="connection_error">Connection error</string>
    <string name="app_internal_error">App internal error</string>
    <string name="server_error">Server error</string>
    <string name="set_with_no_cards_error">The set is empty, ignoring the export operation</string>
    <string name="csv_export_error">Failed to export to CSV, try again later</string>
    <string name="file_is_not_csv_error">This file is not a CSV file</string>
    <string name="csv_import_error">Failed to import from CSV, try again later</string>
    <string name="xls_export_error">Failed to export to Excel, try again later</string>
    <string name="no_stats_found">No statistics for this set for now</string>
    <string name="save_image_error">Could not save image</string>

    <string name="untitled_set">Untitled set</string>
    <string name="set_name">Set name</string>
    <string name="set_name_example">e.g. Korean Vocabulary</string>
    <string name="label_name_example">Must be unique, e.g. Todo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text">Text</string>

    <string name="color">Color</string>
    <string name="choose_set_color">Choose set color</string>
    <string name="choose_card_background_color">Choose the card background color</string>
    <string name="edit_card_text_size">Set the card font size</string>
    <string name="set_the_font_size_for_all">Set the font size for all cards</string>
    <string name="choose_card_text_color">Choose the card text color</string>
    <string name="choose_drawing_color">Choose the drawing color</string>
    <string name="clear_card_side">Clear the card side</string>

    <string name="edit_text">Edit text</string>
    <string name="edit_text_hint">Type anything..</string>
    <string name="add_image">Add image</string>
    <string name="drawing">Drawing</string>
    <string name="choose_image">Choose image</string>

    <string name="permission_error">Unless you don\'t give permission, app cannot access your photos</string>
    <string name="label_must_be_unique">There is a label with this name</string>

    <string name="study">Study</string>
    <string name="quiz">Quiz</string>
    <string name="stats">Statistics</string>

    <string name="no_all_sets_found">Looks like there are no sets yet, create new set with \'+\' button on bottom right
        corner
    </string>
    <string name="no_label_sets_found">There are no sets for this label yet, add this label to sets, you will see them
        listed here
    </string>
    <string name="no_archive_sets_found">Archive is empty, archived cards will be stored here</string>
    <string name="no_trash_sets_found">Trash is empty, deleted sets will be listed here</string>
    <string name="folder_is_empty">Empty folder</string>
    <string name="folder">Folder</string>
    <string name="select_csv_files">Select CSV files</string>
    <string name="give_permission_storage">Unless you grant the permission, you cannot import CSV files</string>
    <string name="delete_this_label">Are you sure to delete this label?</string>

    <string name="accuracy">Accuracy</string>
    <string name="based_on_quiz_results">Based on quiz results</string>
    <string name="number_of_cards">Number of cards</string>
    <string name="future">Future</string>
    <string name="past">Past</string>

    <string name="duration">Minutes</string>
    <string name="study_duration_for_quiz">Quiz preparation time duration (minutes)</string>

    <string name="copyright">© 2019 Abduaziz Kayumov</string>
    <string name="email_us">Email us</string>
    <string name="send_email">Send email..</string>
    <string name="play_store">Rate us on the Play Store</string>
    <string name="youtube">Watch us on Youtube</string>
    <string name="developer_email">kayumovabduaziz@gmail.com</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.piapps.flashcardspro</string>
    <string name="youtube_channel">https://www.youtube.com/channel/UCnQ3vq3LNsxrYGlGdziTrhA</string>
    <string name="crop_image">Crop image</string>

    <string name="csv_export_info">Successfully exported. You can find the exported CSV file in \n"/Flashcards folder"
        in your phone\'s external storage
    </string>
    <string name="open">Open</string>

    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste_cards">Paste selected cards</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_to_delete_selected_cards">Are you sure to delete the selected cards?</string>

    <string name="pin_to_top">Pin to Top</string>

    <string name="leitner_score">Leitner System: Box %1$d</string>

</resources>
