<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_star_black"
        android:orderInCategory="100"
        android:title="@string/add_to_favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_color_black"
        android:orderInCategory="100"
        android:title="@string/set_color"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_study"
        android:icon="@drawable/ic_color_black"
        android:orderInCategory="100"
        android:title="@string/study" />

    <item
        android:id="@+id/action_quiz"
        android:icon="@drawable/ic_color_black"
        android:orderInCategory="100"
        android:title="@string/quiz"/>

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_stats_white"
        android:orderInCategory="100"
        android:title="@string/export_to_csv"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_stats_white"
        android:orderInCategory="100"
        android:title="@string/statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_trash_black"
        android:orderInCategory="100"
        android:title="@string/move_to_trash"
        app:showAsAction="never" />

</menu>
